--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-  <title>Hello Coursera!</title>
+  <meta charset="utf-8">
+  <title>lists</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+  <h1>Ordered list</h1>
+  <div>
+    Oreo cookie eating procedure:
+    <ol>
+      <li>Open box</li>
+      <li>Take out cookie</li>
+      <li>Make a Double Oreo
+        <ol>
+          <li>Peel off the top part</li>
+          <li>Place another cookie in the middle</li>
+          <li>Put back the top part</li>
+        </ol>
+      </li>
+      <li>Enjoy!</li>
+    </ol>
+  </div>
 </body>
-
-<html>
+</html>
