--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Ordered list</h1>
   <div>
-    Oreo cookie eating procedure:
+    Oreo cookie eating procedure: teste
     <ol>
       <li>Open box</li>
       <li>Take out cookie</li>
