--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Ordered list</h1>
   <div>
-    Oreo cookie eating procedure: teste
+    Oreo cookie eating procedure: JÀ NAO É UM TESTE
     <ol>
       <li>Open box</li>
       <li>Take out cookie</li>
@@ -21,5 +21,8 @@
       <li>Enjoy!</li>
     </ol>
   </div>
+<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.27.7'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
