--- a/site/index.html
+++ b/site/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>lists</title>
+<meta charset="utf-8">
+<title>Hover
+</title>
+<style>
+
+div:hover {  
+  font-size: 24px;
+  color: red
+}
+
+</style>
 </head>
 <body>
-  <h1>Ordered list</h1>
-  <div>
-    Oreo cookie eating procedure: JÀ NAO É UM TESTE
-    <ol>
-      <li>Open box</li>
-      <li>Take out cookie</li>
-      <li>Make a Double Oreo
-        <ol>
-          <li>Peel off the top part</li>
-          <li>Place another cookie in the middle</li>
-          <li>Put back the top part</li>
-        </ol>
-      </li>
-      <li>Enjoy!</li>
-    </ol>
-  </div>
-<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.27.7'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+<a>
+  <div>A prima é uma fofa</div>
+
+</a>
 </body>
+
 </html>
+
+
