--- a/site/index.html
+++ b/site/index.html
@@ -2,24 +2,51 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Hover
-</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Responsive Layout</title>
+<link rel = "stylesheet" href="style.css">
 <style>
-
-div:hover {  
-  font-size: 24px;
-  color: red
-}
-
 </style>
 </head>
 <body>
-<a>
-  <div>A prima é uma fofa</div>
+<h1>Tasca da Feijoka!</h1>
 
-</a>
+  <div class="col-lg-4 col-md-6 col-sd-12">
+    <div class="menu"> Chicken</div>
+    <div class = "menu_item">Peri-Peri chicken </div> 
+    <div class = "menu_price"> 8,90</div>
+    <div class = "menu_item">Chicken <q> à bràs </q> </div> 
+    <div class = "menu_price"> 9,90</div>
+    <div class = "menu_item">Cabidela rice </div> 
+    <div class = "menu_price"> 10,90</div>
+    <div class = "menu_item">Stuffed Chicken </div> 
+    <div class = "menu_price"> 11,90</div>
+    <aside>we cook with fresh meat from local producers that garantee free range chickens farmed traditionally. </aside>
+  </div>
+  <div class="col-lg-4 col-md-6 col-sd-12">  
+    <div class="menu pink"> Red&nbsp;Meat</div>
+    <div class = "menu_item">Portuguese Stew </div> 
+    <div class = "menu_price"> 8,90</div>
+    <div class = "menu_item">Meatloaf </div> 
+    <div class = "menu_price"> 9,90</div>
+    <div class = "menu_item">Roastef Beef </div> 
+    <div class = "menu_price"> 10,90</div>
+    <div class = "menu_item">Rabbits Rice </div> 
+    <div class = "menu_price"> 11,90</div>
+    <aside>we cook with fresh meat bought daily and only from portuguese producers. </aside>
+  </div>
+  <div class="col-lg-4 col-md-12 col-sd-12">  
+    <div class="menu blue"> Fish </div>
+    <div class = "menu_item"> Seafood rice </div> 
+    <div class = "menu_price"> 8,90 </div>
+    <div class = "menu_item"> Trout </div> 
+    <div class = "menu_price"> 9,90 </div>
+    <div class = "menu_item"> Swordfish </div> 
+    <div class = "menu_price"> 10,90</div>
+    <div class = "menu_item"> 7 wonders of codfish </div> 
+    <div class = "menu_price"> 11,90</div>
+    <aside>we are most proud of our sea! We buy daily from local fisherman only fish wild caught in our coast!! </aside>
+  </div>
+
 </body>
-
 </html>
-
-
