--- a/site/index.html
+++ b/site/index.html
@@ -13,39 +13,21 @@
 
   <div class="col-lg-4 col-md-6 col-sd-12">
     <div class="menu"> Chicken</div>
-    <div class = "menu_item">Peri-Peri chicken </div> 
-    <div class = "menu_price"> 8,90</div>
-    <div class = "menu_item">Chicken <q> à bràs </q> </div> 
-    <div class = "menu_price"> 9,90</div>
-    <div class = "menu_item">Cabidela rice </div> 
-    <div class = "menu_price"> 10,90</div>
-    <div class = "menu_item">Stuffed Chicken </div> 
-    <div class = "menu_price"> 11,90</div>
-    <aside>we cook with fresh meat from local producers that garantee free range chickens farmed traditionally. </aside>
+    <div class = "menu_item">
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
+    </div> 
   </div>
   <div class="col-lg-4 col-md-6 col-sd-12">  
     <div class="menu pink"> Red&nbsp;Meat</div>
-    <div class = "menu_item">Portuguese Stew </div> 
-    <div class = "menu_price"> 8,90</div>
-    <div class = "menu_item">Meatloaf </div> 
-    <div class = "menu_price"> 9,90</div>
-    <div class = "menu_item">Roastef Beef </div> 
-    <div class = "menu_price"> 10,90</div>
-    <div class = "menu_item">Rabbits Rice </div> 
-    <div class = "menu_price"> 11,90</div>
-    <aside>we cook with fresh meat bought daily and only from portuguese producers. </aside>
+    <div class = "menu_item">
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
+    </div> 
   </div>
   <div class="col-lg-4 col-md-12 col-sd-12">  
     <div class="menu blue"> Fish </div>
-    <div class = "menu_item"> Seafood rice </div> 
-    <div class = "menu_price"> 8,90 </div>
-    <div class = "menu_item"> Trout </div> 
-    <div class = "menu_price"> 9,90 </div>
-    <div class = "menu_item"> Swordfish </div> 
-    <div class = "menu_price"> 10,90</div>
-    <div class = "menu_item"> 7 wonders of codfish </div> 
-    <div class = "menu_price"> 11,90</div>
-    <aside>we are most proud of our sea! We buy daily from local fisherman only fish wild caught in our coast!! </aside>
+    <div class = "menu_item">
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
+    </div> 
   </div>
 
 </body>
